[package]
name = "todo"
version = "0.1.0"
authors = ["nuts3745 <japanbik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
askama = "0.10.5"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }